syntax = "proto3";

package netsvr.sessionInfoReq;

import "reCtx.proto";

option go_package = "internal/protocol;protocol";

//business向worker请求网关中的session信息
message SessionInfoReq {
  //req（request）、resp（response）时候的上下文，worker会原样回传给business
  netsvr.reCtx.ReCtx reCtx = 1;
  //连接的session id
  uint32 sessionId = 2;
}